--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,4 @@ vst = { git = "https://github.com/rustaudio/vst-rs" }
 #lv2                = { version = "0.6.0" }
 wlambda            = { path = "../wlambda" }
 wctr_signal_ops    = { path = "../wctr-signal-ops" }
-
-[dev-dependencies]
-# ggez               = "0.5.1"
-# vecmath            = "1.0.0"
-# nalgebra           = "0.18.0"
-# mint               = "0.5.1"
+pugl-sys           = { git = "https://github.com/johannes-mueller/pugl-sys.git" }
