--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ vst = { git = "https://github.com/rustaudio/vst-rs" }
 wlambda            = { path = "../wlambda" }
 wctr_signal_ops    = { path = "../wctr-signal-ops" }
 pugl-sys           = { git = "https://github.com/johannes-mueller/pugl-sys.git" }
+cairo-rs           = "0.9.1"
+
