--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ crate-type = ["cdylib"]
 [dependencies]
 vst = { git = "https://github.com/rustaudio/vst-rs" }
 #lv2                = { version = "0.6.0" }
-wlambda            = { path = "../wlambda" }
-wctr_signal_ops    = { path = "../wctr-signal-ops" }
+#wlambda            = { path = "../wlambda" }
+#wctr_signal_ops    = { path = "../wctr-signal-ops" }
 pugl-sys           = { git = "https://github.com/johannes-mueller/pugl-sys.git" }
+
+[dev-dependencies]
+baseview = { git = "https://github.com/RustAudio/baseview" }
