--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,22 +11,12 @@ name       = "kickmessvst"
 crate-type = ["cdylib", "lib"]
 
 [dependencies]
-vst                = { git = "https://github.com/rustaudio/vst-rs" }
-cairo-rs           = "0.9.1"
+keyboard-types     = { version = "0.5.0", default-features = false }
 raw-window-handle  = "0.3"
-cairo-sys-rs       = { version = "0.10.0", features=["xlib"] }
-x11                = { version = "2.18.2" }
-
-#baseview           = { git = "https://github.com/RustAudio/baseview.git" }
-baseview           = { path = "/home/weictr/devel/other/baseview" }
-
-pugl-sys           = { git = "https://github.com/johannes-mueller/pugl-sys.git" }
-#pugl-sys           = { path = "/home/weictr/devel/other/pugl-sys/" }
-
 gl                 = "0.14.0"
 glutin             = "0.24.1"
+vst                = { git = "https://github.com/rustaudio/vst-rs" }
 femtovg            = { git = "https://github.com/femtovg/femtovg" }
 raw-gl-context     = { git = "https://github.com/glowcoil/raw-gl-context" }
-
-[dev-dependencies]
-winit = "0.22.2"
+baseview           = { git = "https://github.com/RustAudio/baseview.git" }
+#baseview           = { path = "/home/weictr/devel/other/baseview" }
