--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ femtovg            = { git = "https://github.com/femtovg/femtovg", rev = "9c5de2
 raw-gl-context     = { git = "https://github.com/glowcoil/raw-gl-context" }
 baseview           = { git = "https://github.com/RustAudio/baseview.git", rev = "36e4474c8aeb88" }
 #baseview           = { path = "/home/weictr/devel/other/baseview" }
+ringbuf            = "0.2.2"
