--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,10 @@ crate-type = ["cdylib", "lib"]
 vst                = { git = "https://github.com/WeirdConstructor/vst-rs", branch = "host_begin_end_edit" }
 femtovg            = { git = "https://github.com/femtovg/femtovg", rev = "9c5de268cd1f85d9e32d20c8a37341709c92bdb5" }
 raw-gl-context     = { git = "https://github.com/glowcoil/raw-gl-context" }
-baseview           = { git = "https://github.com/RustAudio/baseview.git", rev = "36e4474c8aeb88" }
+baseview           = { git = "https://github.com/WeirdConstructor/baseview.git", branch = "fix_resize_problems" }
+#baseview           = { git = "https://github.com/RustAudio/baseview.git", rev = "36e4474c8aeb88" }
+#baseview           = { path = "/home/weictr/devel/other/baseview" }
+#baseview           = { path = "/home/weictr/devel/rust/baseview" }
 keyboard-types     = { version = "0.5.0", default-features = false }
 raw-window-handle  = "0.3"
 gl                 = "0.14.0"
