--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,9 @@ name       = "kickmessvst"
 crate-type = ["cdylib", "lib"]
 
 [dependencies]
+vst                = { git = "https://github.com/RustAudio/vst-rs.git" }
 #vst                = { git = "https://github.com/WeirdConstructor/vst-rs", branch = "host_begin_end_edit" }
-vst                = { path = "/home/weictr/devel/other/vst-rs/" }
+#vst                = { path = "/home/weictr/devel/other/vst-rs/" }
 femtovg            = { git = "https://github.com/femtovg/femtovg", rev = "9c5de268cd1f85d9e32d20c8a37341709c92bdb5" }
 raw-gl-context     = { git = "https://github.com/glowcoil/raw-gl-context" }
 baseview           = { git = "https://github.com/WeirdConstructor/baseview.git", branch = "fix_resize_problems" }
