--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition     = "2018"
 license     = "AGPL-3.0-or-later"
 description = "Kickmess - Port of LMMS Kicker Plugin"
 
+[features]
+mega = []
+
 [lib]
 name       = "kickmessvst"
 crate-type = ["cdylib", "lib"]
