--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ vst                = { git = "https://github.com/RustAudio/vst-rs.git" }
 #vst                = { path = "/home/weictr/devel/other/vst-rs/" }
 femtovg            = { git = "https://github.com/femtovg/femtovg", rev = "9c5de268cd1f85d9e32d20c8a37341709c92bdb5" }
 raw-gl-context     = { git = "https://github.com/glowcoil/raw-gl-context" }
+#raw-gl-context     = { path = "/home/weictr/devel/other/raw-gl-context" }
 baseview           = { git = "https://github.com/WeirdConstructor/baseview.git", branch = "fix_resize_problems" }
 #baseview           = { git = "https://github.com/RustAudio/baseview.git", rev = "36e4474c8aeb88" }
 #baseview           = { path = "/home/weictr/devel/other/baseview" }
