--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name        = "kickmessvst"
-version     = "0.2.2-beta1"
+version     = "0.2.2"
 authors     = ["Weird Constructor <weirdconstructor@gmail.com>"]
 edition     = "2018"
 license     = "AGPL-3.0-or-later"
