--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,11 +19,11 @@ jobs:
     - uses: actions/checkout@v2  
     
     
-    #odn't ask me why because it's a reason i think build fails
+    #don't ask me why because it's a reason i think build fails
     - name: Install Xorg 
       run: |
-          sudo apt update
-          sudo apt-get install xserver-xorg-core --no-install-recommends --no-install-suggests
+          sudo apt-get update
+          sudo apt-get install xserver-xorg-core -y
     
     - name: Enable caching
       uses: Swatinem/rust-cache@v1.3.0
