--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,11 +19,10 @@ jobs:
     - uses: actions/checkout@v2  
     
     
-    #don't ask me why because it's a reason i think build fails
-    - name: Install Xorg 
+    - name: Install dependencies 
       run: |
           sudo apt-get update
-          sudo apt-get install xorg xorg-dev -y
+          sudo apt-get install xorg xorg-dev gcc libxcb-icccm4 x11-xcb libxcb-dri2-0 libxcb-dri2-0-dev -y
     
     - name: Enable caching
       uses: Swatinem/rust-cache@v1.3.0
